--- a/3DSecure2AdvancedHelperMethods.html
+++ b/3DSecure2AdvancedHelperMethods.html
@@ -85,7 +85,7 @@ import createForm from "./scripts/3ds2HelperMethods/form/index.js";
 import config from "./scripts/3ds2HelperMethods/config/index.js";
 
 // constants
-const NOTIFICATION_URL = common.SERVER_URL + "?endpoint=threeds2_result_page";
+const NOTIFICATION_URL = common.SUBMIT_URL + "?endpoint=threeds2_result_page";
 const CACHED_THREEDS_URL = "https://pal-test.adyen.com/threeds2simulator/acs/startMethod.shtml";
 
 // container for global variables
@@ -317,7 +317,7 @@ function handleFailedSDKChallengePromise(failedPromiseResponse) {
 // retrieve cavv and eci values
 // to potentially send to another acquirer
 function retrieve3ds2Result() {
-	let url = common.SERVER_URL + "?endpoint=threeds2_adv_retrieve3ds2Result" + "&pspReference=" + globals.challengePspReference;
+	let url = common.SUBMIT_URL + "?endpoint=threeds2_adv_retrieve3ds2Result" + "&pspReference=" + globals.challengePspReference;
 	common.AJAXGet(url, acquirerAgnosticAuth);
 }
 
@@ -332,12 +332,12 @@ function acquirerAgnosticAuth(data) {
 	common.output(response, "Response from Adyen to server");
 	globals.flowchart.setActive("RetrieveMPIData");
 
-	let url = common.SERVER_URL + "?endpoint=threeds2_adv_acquirerAgnosticAuth" + "&eci=";
+	let url = common.SUBMIT_URL + "?endpoint=threeds2_adv_acquirerAgnosticAuth" + "&eci=";
 }
 
 // send authorise3ds2 call with stored token
 function adyenTokenAuth(transStatus) {
-	let url = common.SERVER_URL + "?endpoint=threeds2_auth_via_token" + "&threeDS2Token=" + encodeURIComponent(globals.threeDS2Token) + "&transStatus=" + transStatus;
+	let url = common.SUBMIT_URL + "?endpoint=threeds2_auth_via_token" + "&threeDS2Token=" + encodeURIComponent(globals.threeDS2Token) + "&transStatus=" + transStatus;
 	common.AJAXGet(url, adyenTokenAuthCallback);
 }
 
