update index to point to 3ds2 component

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 	<h3 class="index-header">3D Secure</h3>
 	<a class="index-link" href="3DSecure.html">3D Secure 1</a><br>
-	<a class="index-link" href="3DSecure2Basic.html">3D Secure 2.0 - Basic - SDK</a><br>
-	<!-- <a class="index-link" href="3DSecure2AdvancedHelperMethods.html">3D Secure 2.0 - Advanced - Helper Methods</a><br> -->
-	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2.0 - Advanced - SDK</a><br>
+	<a class="index-link" href="3DSecure2BasicComponent.html">3D Secure 2</a><br>
+	<!-- <a class="index-link" href="3DSecure2Basic.html">3D Secure 2.0 - Basic - SDK</a><br> -->
+	<!-- <a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2.0 - Advanced - SDK</a><br> -->
 
 	<h3 class="index-header">Checkout</h3>
 	<a class="index-link" href="checkout.html">Checkout SDK</a><br>
