--- a/3DSecure2Basic.html
+++ b/3DSecure2Basic.html
@@ -158,8 +158,6 @@ function submitForm(e) {
 // receive response from initialAuthoriseCall
 function initialAuthoriseCallback(data) {
 	// parse and output request / response
-	data = JSON.parse(data);
-
 	const request = data.request;
 	const response = data.response;
 
@@ -230,8 +228,6 @@ function firstAuthorise3ds2(threeDSCompInd) {
 
 function firstAuthorise3ds2Callback(data) {
 	// parse and output request / response
-	data = JSON.parse(data);
-
 	const request = data.request;
 	const response = data.response;
 
@@ -291,7 +287,7 @@ function handleSuccessfulSDKChallengePromise(successfulPromiseResponse) {
 	common.output("threeDSServerTransID=" + successfulPromiseResponse.threeDSServerTransID + "<br>transStatus=" + successfulPromiseResponse.transStatus, "Challenge succeeded");
 
 	// remove challenge iframe
-	document.querySelector("#sdkContainer").classList.add("hidden");
+	common.hide("#sdkContainer");
 
 	// update flowchart
 	globals.flowchart.setActive("ChallengeSuccessful");
@@ -311,7 +307,7 @@ function handleFailedSDKChallengePromise(failedPromiseResponse) {
 	console.log(failedPromiseResponse);
 
 	// remove challenge iframe
-	document.querySelector("#sdkContainer").classList.add("hidden");
+	common.hide("#sdkContainer");
 
 	// update flowchart
 	globals.flowchart.setActive("ChallengeFailed");
@@ -326,8 +322,6 @@ function retrieve3ds2Result() {
 
 // send auth request using cavv and eci values
 function acquirerAgnosticAuth(data) {
-	data = JSON.parse(data);
-
 	const request = data.request;
 	const response = data.response;
 
@@ -346,8 +340,6 @@ function adyenTokenAuth(transStatus) {
 
 // get response from authorise3ds2 call
 function adyenTokenAuthCallback(data) {
-	data = JSON.parse(data);
-
 	const request = data.request;
 	const response = data.response;
 
