--- a/components.html
+++ b/components.html
@@ -13,18 +13,19 @@
 	<div class="block">
 		<form id="paymentForm" class="client-form" >
 			Value: <input type="text" class="payment-data" name="value" value="1500"/><br>
-			Currency: <input type="text" class="payment-data" name="currency" value="USD"/><br>
-			CountryCode: <input type="text" class="payment-data" name="countryCode" value="US"/><br>
+			Currency: <input type="text" class="payment-data" name="currency" value="EUR"/><br>
+			CountryCode: <input type="text" class="payment-data" name="countryCode" value="NL"/><br>
 			ShopperLocale: <input type="text" class="payment-data" name="shopperLocale" value="en_GB"/><br>
 			Reference: <input type="text" class="payment-data" name="reference" value="Localhost Components"/><br>
 			<button id="checkoutBtn" class="block">Initialize</button>
 		</form>
 	</div>
 
-	<div id="cardsContainer" class="client-form hidden">
-		<div id="cardComponentHolder"></div>
-		<button id="submitCardsBtn" disabled=true>Pay with card</button>
-	</div>
+	<div id="componentHolder" class="component display-none"></div>
+	<div id="cardComponentHolder" class="component display-none"></div>
+	<div id="sepaComponentHolder" class="component display-none"></div>
+	<br>
+	<button id="payBtn" class="hidden" disabled=true>Pay</button>
 
 
 	<div id="output"></div>
@@ -36,25 +37,28 @@ import * as common from "./scripts/common.js";
 
 const ORIGIN_KEY = "pub.v2.8115054323780109.aHR0cDovL2xvY2FsaG9zdDo4MDAw.B92basPQjzeM7_TtJ2IKZoln780QtvwAiPFDEbKs7Ng";
 
+const globals = {};
+
 // actions to do on page load
 window.onload = function() {
 
 	// event listener for initialize button
 	document.getElementById("checkoutBtn").addEventListener("click", getAvailablePaymentMethods);
+
+	globals.payBtn = document.querySelector("#payBtn");
+	globals.payBtn.onclick = sendPayment;
 };
 
 // get data from form and make call to paymentMethods
 function getAvailablePaymentMethods(e) {
 	e.preventDefault();
 
+	common.hide("#paymentForm");
 	common.AJAXPost(common.buildFormURL({ endpoint: "checkout_payment_methods" }), handlePaymentMethodsCallback);
 }
 
 // display available components
 function handlePaymentMethodsCallback(response) {
-
-	// parse response
-	response = JSON.parse(response);
 
 	// config options shared between components
 	const sharedConfiguration = {
@@ -63,46 +67,62 @@ function handlePaymentMethodsCallback(response) {
 	    loadingContext: "https://checkoutshopper-test.adyen.com/checkoutshopper/"
 	};
 
+	// show disabled pay button
+	globals.payBtn.classList.remove("hidden");
+
 	// intialize checkout object
 	const checkout = new AdyenCheckout(sharedConfiguration);
 
 	// iterate through returned payment methods
 	// and render components where available
 	for (let pm of response.paymentMethods) {
+		
 		// cards
 		if (pm.type === "scheme") {
 			const card = checkout.create("card", {
-			    onChange: handleCardsChange
+			    onChange: handleStateChange
 			    // onValid also works here
 			}).mount("#cardComponentHolder");
-			document.querySelector("#cardsContainer").classList.remove("hidden");
+			common.unhide("#cardComponentHolder");
+		}
+
+		// SEPA
+		else if (pm.type === "sepadirectdebit") {
+			const sepa = checkout.create("sepadirectdebit", {
+				onChange: handleStateChange
+			}).mount("#sepaComponentHolder");
+			common.unhide("#sepaComponentHolder");
 		}
 	}
 }
 
-// enable button when all data is valid
-function handleCardsChange(state, component) {
-	document.querySelector("#submitCardsBtn").disabled = !state.isValid;
+// handle changes in component state
+function handleStateChange(state, component) {
+	globals.payBtn.disabled = !state.isValid;
 
-	// add event listener to submit transaction
-	if (state.isValid) {
-		
-		// pass encrypted card data to Adyen
-		document.querySelector("#submitCardsBtn").addEventListener("click", () => {
-			
-			// add holder name
-			state.data.holderName = "Test Shopper";
+	globals.activePaymentInfo = state.data;
+}
 
-			// send request to server to forward to Adyen
-			let url = common.buildFormURL(state.data) + "endpoint=checkout_payments_api";
-			common.AJAXPost(url, handlePaymentsCallback);
-		});
-	}
+// send payment info to Adyen
+function sendPayment() {
+	const formData = common.getJSONFromFormData("#paymentForm");
+	const request = {
+		"merchantAccount":"",
+		"reference":"Localhost components",
+		"amount":{
+			"currency": formData.currency,
+			"value": formData.value
+		},
+		"paymentMethod": globals.activePaymentInfo
+	};
+	request.endpoint = common.endpoints.payments;
+
+	common.AJAXPost(common.SERVER_URL, handlePaymentsCallback, request);
 }
 
 // display result of call to Adyen
-function handlePaymentsCallback(response) {
-	common.output(response);
+function handlePaymentsCallback(data) {
+	common.output(data);
 }
 
 </script>
