--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,7 @@ function setupVerify(pHookData) {
 	document.getElementById("verifyBtn").addEventListener("click", function() {
 
 		// Hide button
-		document.getElementById("verifyBtn").remove()
+		document.getElementById("verifyBtn").remove();
 
 		// Send data to server
 		var url = "http://localhost:8000/cgi-bin/submit.py";
