--- a/HPP.html
+++ b/HPP.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"/>
 	<script src="scripts/reactComplete.js"></script>
-	<script id="reactScript" type="text/jsx" src="scripts/reactForm.js"></script>
+	<script type="text/jsx" src="scripts/reactForm.js"></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@ var formData = {
 	"hiddenFields": [
 		["endpoint", "HPP"]],
 	"submitText": "Checkout"
-}
+};
 
 function renderPage() {
 	renderReactForm(formData, "reactHolder");
